--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,12 @@
       <div id="chat_container"></div>
       <form>
         <textarea class="promptBox" name="prompt" rows="1" cols="1" placeholder="Ask C.H.A.R.L.I.E."></textarea>
-        
+        <div class="chat">
+          <div class="profile">
+              <img src="/assets/bot-61bdb6bf.svg" alt="bot">
+          </div>
+          <div class="message">Hello there! I'm CHARLIE, ask me anything.</div>
+      </div>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
