--- a/client/index.html
+++ b/client/index.html
@@ -9,15 +9,18 @@
   </head>
   <body>
     <div id="app">
-      <div id="chat_container"></div>
-      <form>
-        <textarea class="promptBox" name="prompt" rows="1" cols="1" placeholder="Ask C.H.A.R.L.I.E."></textarea>
-        <div class="chat">
-          <div class="profile">
-              <img src="/assets/bot-61bdb6bf.svg" alt="bot">
+      <div id="chat_container">
+        <div class="wrapper ai">
+          <div class="chat">
+              <div class="profile">
+                  <img src="/assets/bot-61bdb6bf.svg" alt="bot">
+              </div>
+              <div class="message">Hi there! I'm CHARLIE, ask me anything!</div>
           </div>
-          <div class="message">Hello there! I'm CHARLIE, ask me anything.</div>
       </div>
+      </div>
+      <form>
+        <textarea class="promptBox" name="prompt" rows="1" cols="1" placeholder="Ask CHARLE"></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
