--- a/client/index.html
+++ b/client/index.html
@@ -15,12 +15,12 @@
               <div class="profile">
                   <img src="/assets/bot-61bdb6bf.svg" alt="bot">
               </div>
-              <div class="message">Hi there! I'm CHARLIE, ask me anything!</div>
+              <div class="message">Hello there! I'm CHARLIE, ask me anything!</div>
           </div>
       </div>
       </div>
       <form>
-        <textarea class="promptBox" name="prompt" rows="1" cols="1" placeholder="Ask CHARLE"></textarea>
+        <textarea class="promptBox" name="prompt" rows="1" cols="1" placeholder="Ask CHARLIE"></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
     </div>
