--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
                   <img src="/assets/bot-61bdb6bf.svg" alt="bot">
               </div>
               <div class="message">Hello there! I'm CHARLIE, ask me anything!</div>
+              <img src="assets/Kevin.pdf" alt="">
           </div>
       </div>
       </div>
